<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.argenes.android.sanicen.activities.SearchActivity">

    <!-- Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/ccaa" />

    <!-- Spinner Dropdown -->

    <Spinner
        android:id="@+id/ccaa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <!-- Select Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/provinces" />

    <!-- Spinner Dropdown -->
    <Spinner
        android:id="@+id/provinces"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />


    <!-- Select Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/municipalties" />

    <!-- Spinner Dropdown -->
    <Spinner
        android:id="@+id/municipalties"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <!-- Select Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/center_types" />

    <!-- Spinner Dropdown -->
    <Spinner
        android:id="@+id/centers_types"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:id="@+id/btnNext"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
